--- a/config_arbitrum.json
+++ b/config_arbitrum.json
@@ -3,6 +3,7 @@
     "node": "https://arb1.arbitrum.io/rpc",
     "build": "build/FLAKars",
     "private_key": "your-wallet-sk",
+    "dual": true,
     "routers": [
         {
             "dex": "uniswap v3",
