--- a/config_goerli.json
+++ b/config_goerli.json
@@ -1,8 +1,9 @@
 {
     "LPA": "0xC911B590248d127aD18546B186cC6B324e99F02c",
-    "node": "https://goerli.infura.io/v3/<infura-id>",
+    "node": "https://goerli.infura.io/v3/<your-infura-api>",
     "build": "build/FLAKars",
-    "private_key": "your-wallet-sk",
+    "private_key": "<your-wallet-sk>",
+    "dual": false,
     "routers": [
         {
             "dex": "uniswap v3",
