--- a/config_arbitrum.json
+++ b/config_arbitrum.json
@@ -2,7 +2,7 @@
     "LPA": "0xa97684ead0e402dc232d5a977953df7ecbab3cdb",
     "node": "https://arb1.arbitrum.io/rpc",
     "build": "build/FLAKars",
-    "private_key": "your-wallet-sk",
+    "private_key": "<your-wallet-sk>",
     "weth": "wETH",
     "eth-dex": "sushiswap",
     "routers": [
