--- a/config_goerli.json
+++ b/config_goerli.json
@@ -1,6 +1,6 @@
 {
     "LPA": "0xC911B590248d127aD18546B186cC6B324e99F02c",
-    "node": "https://goerli.infura.io/v3/<your-infura-key>",
+    "node": "https://goerli.infura.io/v3/<your-infura-api>",
     "build": "build/FLAKars",
     "private_key": "<your-wallet-sk>",
     "weth": "wETH",
@@ -23,8 +23,12 @@
         }
     ],
     "fl": [
+        { "symbol": "USDC aave" },
         { "symbol": "wETH aave" },
-        { "symbol": "USDC aave" }
+        { "symbol": "wBTC aave" },
+        { "symbol": "DAI aave" },
+        { "symbol": "USDT aave" },
+        { "symbol": "LINK aave" }
     ],
     "tokens": [
         { "symbol": "USDC", "address": "0x07865c6e87b9f70255377e024ace6630c1eaa37f" },
@@ -32,7 +36,13 @@
         { "symbol": "wBTC", "address": "0xc04b0d3107736c32e19f1c62b2af67be61d63a05" },
         { "symbol": "DAI", "address": "0xdc31Ee1784292379Fbb2964b3B9C4124D8F89C60" },
         { "symbol": "USDT", "address": "0xc2c527c0cacf457746bd31b2a698fe89de2b6d49" },
+        { "symbol": "LINK", "address": "0x326C977E6efc84E512bB9C30f76E30c160eD06FB" },
+        { "symbol": "UNI", "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984" },
         { "symbol": "USDC aave", "address": "0x65aFADD39029741B3b8f0756952C74678c9cEC93" },
-        { "symbol": "wETH aave", "address": "0xCCB14936C2E000ED8393A571D15A2672537838Ad" }
+        { "symbol": "wETH aave", "address": "0xCCB14936C2E000ED8393A571D15A2672537838Ad" },
+        { "symbol": "wBTC aave", "address": "0x45AC379F019E48ca5dAC02E54F406F99F5088099" },
+        { "symbol": "DAI aave", "address": "0xBa8DCeD3512925e52FE67b1b5329187589072A55" },
+        { "symbol": "USDT aave", "address": "0x2E8D98fd126a32362F2Bd8aA427E59a1ec63F780" },
+        { "symbol": "LINK aave", "address": "0xe9c4393a23246293a8D31BF7ab68c17d4CF90A29" }
     ]
 }
