Added UI menu to the bot!

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-TOKEN=
-CONTRACT=0xb5E7c1d0e2F77B447d2fbf57a19b40b5671ECbD2
+TOKEN=<your-discord-bot-token>
+CONTRACT=<your-smart-contract-address>
+ALLOWED_ROLE=1086986300479000676
