--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,47 @@
-aiohttp==3.9.3
+aiofiles==23.2.1
+aiogram==3.10.0
+aiohttp==3.9.5
 aiosignal==1.3.1
+annotated-types==0.7.0
+asyncio==3.4.3
 attrs==23.2.0
 bitarray==2.9.2
-certifi==2024.2.2
+certifi==2024.7.4
 charset-normalizer==3.3.2
+ckzg==1.0.2
 colorama==0.4.6
 cytoolz==0.12.3
-eth-account==0.11.0
+eth-account==0.11.2
 eth-hash==0.7.0
-eth-keyfile==0.8.0
-eth-keys==0.5.0
+eth-keyfile==0.8.1
+eth-keys==0.5.1
 eth-rlp==1.0.1
-eth-typing==4.0.0
-eth-utils==4.0.0
-eth_abi==5.0.1
+eth-typing==4.4.0
+eth-utils==4.1.1
+eth_abi==5.1.0
 frozenlist==1.4.1
 hexbytes==0.3.1
-idna==3.6
-jsonschema==4.21.1
+idna==3.7
+jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 lru-dict==1.2.0
+magic-filter==1.0.12
 multidict==6.0.5
-parsimonious==0.9.0
-protobuf==5.26.0
+parsimonious==0.10.0
+protobuf==5.27.2
 pycryptodome==3.20.0
+pydantic==2.8.2
+pydantic_core==2.20.1
 pyunormalize==15.1.0
 pywin32==306
-referencing==0.34.0
-regex==2023.12.25
-requests==2.31.0
-rlp==4.0.0
-rpds-py==0.18.0
+referencing==0.35.1
+regex==2024.7.24
+requests==2.32.3
+rlp==4.0.1
+rpds-py==0.19.1
 toolz==0.12.1
-typing_extensions==4.10.0
-urllib3==2.2.1
-web3==6.15.1
+typing_extensions==4.12.2
+urllib3==2.2.2
+web3==6.20.1
 websockets==12.0
 yarl==1.9.4
